# handwritten-text-recognition

./: pyproject.toml
src/data/: generator.py  reader.py
src/network/: model.py
